--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ITOAPP"
         tools:targetApi="31">
         <activity
+            android:name=".Home_Menu"
+            android:exported="false" />
+        <activity
             android:name=".login_admi"
             android:exported="false" />
         <activity
