--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.ITOAPP"
         tools:targetApi="31">
         <activity
+            android:name=".DatosPersonales"
+            android:exported="false" />
+        <activity
+            android:name=".Fragment_Perfil"
+            android:exported="false" />
+        <activity
             android:name=".Activity_ServicioSocial"
             android:exported="false" />
         <activity
